# LiteTVOS

./: .gitignore  Cargo.toml  README.md  render.yaml
docs/: 01-Vision.md  02-Architecture.md  03-UI-Design.md  04-Design-System.md  05-Kernel.md  06-Memory-Optimization.md  07-Power-Optimization.md  08-Security.md  09-OTA.md  10-Ecosystem.md  11-Developer-SDK.md  12-API.md  13-Roadmap.md  14-Contributing.md  15-Audio-Management.md  16-AI-Management.md  17-Hardware-Support.md  README.md  design-brief.md
frameworks/: README.md
frameworks/aurora-catalog/: Cargo.toml
frameworks/aurora-catalog/src/: lib.rs
frameworks/aurora-focus/: Cargo.toml
frameworks/aurora-focus/src/: lib.rs
frameworks/aurora-tokens/: Cargo.toml
frameworks/aurora-tokens/src/: lib.rs
frameworks/aurora-ui/: README.md  demo.html  icons.js  tokens.css
frameworks/aurora-ui/components/: aurora-card.js
kernel/: README.md
launcher/: Cargo.toml  README.md
launcher/src/: compositor.rs  main.rs  serve.rs
settings/: README.md
systemui/: README.md
themes/: README.md
tools/: README.md
