[package]
name = "litetv-launcher"
description = "LiteTV OS launcher / Aurora UI shell entry point"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "litetv-launcher"
path = "src/main.rs"

[dependencies]
aurora-tokens = { path = "../frameworks/aurora-tokens" }
aurora-focus = { path = "../frameworks/aurora-focus" }
aurora-catalog = { path = "../frameworks/aurora-catalog" }

[features]
# The real Wayland compositor (Smithay) + Skia renderer land behind this flag
# once their native deps/toolchains are wired. Default build is the headless
# model so it compiles and tests offline.
default = []
render = []
